Revision history for Git-Raw

{{$NEXT}}

 - Update libgit2 to da82043
    + Add Tag -> foreach() method
 - Documentation fixes (no functional changes)

0.16      2012-11-30 12:43:50 Europe/Rome

 - Load Git::Raw from other modules too (thanks, @ruz!)
 - Make Branch ISA Reference (thanks, @ruz!)
 - Add Branch -> foreach() method (thanks, @ruz!)
    + Add Repository -> branches() method
 - Add Repository -> ignore() method
 - Add Stash class
 - The Remote -> name() and url() methods now take an optional argument that
   is used to change the name/url of a remote.
 - Add RefSpec class
    + Add Remote -> {fetch,push}spec() methods
 - Add Blob -> size() method
 - Add Blob -> create() method
    + Add Repository -> blob() method
 - Add Reference -> is_{branch,packed,remote}() methods (thanks, @ruz!)
 - Add Branch -> move() method

0.15      2012-10-30 22:39:50 Europe/Rome

 - The $is_bare check in Repository -> clone() was inverted
 - Update libgit2 to 6c21358a8
    + Remove Index -> uniq() and append() methods

0.14      2012-10-19 12:26:40 Europe/Rome

 - Test fixes (GH#2) (thanks, @vlet)
 - Update libgit2 to b2b571ce0

0.13      2012-10-02 18:27:05 Europe/Rome

 - Fix test failures

0.12      2012-09-22 19:24:45 Europe/Rome

 - Fix typo in Reference's docs
 - Add a proper Changes file
 - Update libgit2 to d75074:
    + Remove Branch -> delete() method (incompatible change)
    + Add Repository -> clone() method

0.11      2012-08-23 09:41:38 Europe/Rome

 - Various documentation fixes (no functional changes)

0.10      2012-08-22 18:53:04 Europe/Rome

 - Add delete() method for all the objects that support it
 - Move Repository -> tag(), branch() and walker() functionality to the
   respective object constructors

0.09      2012-08-22 17:56:59 Europe/Rome

 - Add lookup() method for all the objects that support it
 - Add Diff class

0.08      2012-08-21 15:15:17 Europe/Rome

 - Add Repository -> reset() method
 - Add Branch class and Repository -> branch() method