@@ -10,7 +10,6 @@
 * treebuilder
 
 # Methods
-* Branch -> is_head
 * Config -> foreach(...)
 * Config -> refresh
 * Index -> remove(...)
