@@ -77,3 +77,12 @@ foreach(class, repo, cb)
 
 		if (rc != GIT_EUSER)
 			git_check_error(rc);
+
+bool
+is_head(self)
+	Branch self
+
+	CODE:
+		RETVAL = git_branch_is_head(self);
+
+	OUTPUT: RETVAL
